UCF-APR2.4/ftr main/force-app/main/default/objects/ProductsFieldConfig__mdt/ProductsFieldConfig__mdt.object-meta.xml
<CustomObject>
    <label>Products Field Config</label>
    <pluralLabel>ProductsFieldConfigs</pluralLabel>
</CustomObject>