UCF-APR2.4/ftr main/force-app/main/default/objects/ProductsFieldConfig__mdt/fields/FieldValue__c.field-meta.xml
<CustomField>
    <fullName>FieldValue__c</fullName>
    <label>Product2 Field Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>