UCF-APR2.4/ftr main/force-app/main/default/objects/ProductsFieldConfig__mdt/fields/PicklistValue__c.field-meta.xml
<CustomField>
    <fullName>PicklistValue__c</fullName>
    <label>Picklist Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>