UCF-APR2.4/ftr main/force-app/main/default/objects/ProductsFieldConfig__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Field__c</columns>
    <columns>FieldValue__c</columns>
    <columns>PicklistValue__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>